fluxcd/apps/overlays/production/librespeed-speedtest/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librespeed-speedtest
spec:
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
    spec:
      containers:
        - name: librespeed-speedtest
          image: ghcr.io/librespeed/speedtest:6.3.0-alpine
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
