fluxcd/apps/overlays/production/librespeed-speedtest/service-librespeed-speedtest-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: librespeed-speedtest
  labels:
    policy.prplanit.com/ingress: "true"
