fluxcd/apps/overlays/production/librespeed-speedtest/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: librespeed-speedtest
  annotations:
    lbipam.cilium.io/ips: "172.22.30.122"
    lbipam.cilium.io/sharing-key: "compass"
    lbipam.cilium.io/sharing-cross-namespace: "*"
spec:
  type: LoadBalancer
